--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "author": "Walter Kimaro <wakyj07@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react": "^16.8.6"
   }
 }
